--- a/JFA.AdventureWorks/JFA.AdventureWorks.Web/Views/People/Index.cshtml
+++ b/JFA.AdventureWorks/JFA.AdventureWorks.Web/Views/People/Index.cshtml
@@ -1,99 +1,57 @@
-﻿@model IEnumerable<JFA.AdventureWorks.Entities.Person>
+﻿@model JFA.AdventureWorks.Web.ViewModel.IndexPager<JFA.AdventureWorks.Entities.Person>
 
 @{
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>People</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.PersonType)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NameStyle)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Title)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.MiddleName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LastName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Suffix)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.EmailPromotion)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AdditionalContactInfo)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Demographics)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.rowguid)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ModifiedDate)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.PersonType)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NameStyle)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.MiddleName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LastName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Suffix)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EmailPromotion)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AdditionalContactInfo)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Demographics)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.rowguid)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ModifiedDate)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.BusinessEntityID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.BusinessEntityID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.BusinessEntityID })
-        </td>
-    </tr>
-}
+<table class="table table-hover">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.TheClass.FirstName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TheClass.LastName)
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model.TheList)
+        {
+            <tr id="tr-id-@item.BusinessEntityID" class="clickable-row" data-id="@item.BusinessEntityID">
+                <td>
+                    @Html.DisplayFor(modelItem => item.FirstName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastName)
+                </td>
+            </tr>
+        }
+    </tbody>
 
 </table>
+
+
+@Html.Partial("_Pager", Model)
+
+
+@section scripts{
+
+    <script>
+
+    $(function () {
+
+        $('.clickable-row').click(function () {
+            alert($(this).data('id'));
+        })
+
+    })
+
+    </script>
+
+}
